fixing scrollbars

--- a/styles/lancer-sheet-only.css
+++ b/styles/lancer-sheet-only.css
@@ -5,7 +5,7 @@
     }
     #accdiff {
         max-height:100vh;
-        overflow: scroll;
+        overflow: auto;
     }
 }
 
